--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,57 +1,58 @@
 stages: [build, deploy]
 
 variables:
-  DOCKER_TLS_CERTDIR: ""          # для dind без TLS
+  # dind
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ""
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
 
 # --- BUILD ---
 build:
   stage: build
+  tags: ["smartapphub","docker"]     # чтобы джоб сел ровно на твой runner
   image: docker:24
   services:
     - name: docker:24-dind
       command: ["--tls=false"]
   script:
-    - echo "Login to GitLab Registry"
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
     - docker build -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" -t "$CI_REGISTRY_IMAGE:latest" .
     - docker push "$CI_REGISTRY_IMAGE:$IMAGE_TAG"
     - docker push "$CI_REGISTRY_IMAGE:latest"
-  only:
-    - main
-    - master
+  only: [main, master]
 
 # --- DEPLOY ---
 deploy:
   stage: deploy
+  tags: ["smartapphub","docker"]     # те же теги
   image: alpine:3.20
   before_script:
     - apk add --no-cache openssh-client rsync docker-cli docker-cli-compose
-    # SSH ключ для доступа к серверу
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -p "${SERVER_SSH_PORT:-22}" "$SERVER_HOST" >> ~/.ssh/known_hosts
   script:
-    # Зальём актуальный compose на сервер
+    # Подготовим директории на сервере
+    - |
+      ssh -p "${SERVER_SSH_PORT:-22}" "$SERVER_USER@$SERVER_HOST" \
+      "mkdir -p $SERVER_DEPLOY_PATH \
+               /home/botwork/smartapphub/uploads \
+               /home/botwork/smartapphub/data && \
+       sudo chown -R 33:33 /home/botwork/smartapphub"
+    # Зальём compose
     - |
       rsync -avz -e "ssh -p ${SERVER_SSH_PORT:-22}" deploy/docker-compose.yml \
         "$SERVER_USER@$SERVER_HOST:$SERVER_DEPLOY_PATH/docker-compose.yml"
-    # Готовим каталоги и логинимся в реестр на удалённой машине, затем pull/up
+    # Логин в реестр и выкладка
     - |
       ssh -p "${SERVER_SSH_PORT:-22}" "$SERVER_USER@$SERVER_HOST" \
-      "mkdir -p $SERVER_DEPLOY_PATH && \
-       sudo mkdir -p /home/botwork/smartapphub/uploads /home/botwork/smartapphub/data && \
-       sudo chown -R 33:33 /home/botwork/smartapphub && \
-       echo '$GL_DEPLOY_TOKEN' | docker login -u '$GL_DEPLOY_USER' --password-stdin $CI_REGISTRY && \
-       export REGISTRY_IMAGE='$CI_REGISTRY_IMAGE' && \
-       docker compose -f $SERVER_DEPLOY_PATH/docker-compose.yml pull && \
-       docker compose -f $SERVER_DEPLOY_PATH/docker-compose.yml up -d --remove-orphans && \
+      "echo '$GL_DEPLOY_TOKEN' | docker login -u '$GL_DEPLOY_USER' --password-stdin $CI_REGISTRY && \
+       REGISTRY_IMAGE='$CI_REGISTRY_IMAGE' docker compose -f $SERVER_DEPLOY_PATH/docker-compose.yml pull && \
+       REGISTRY_IMAGE='$CI_REGISTRY_IMAGE' docker compose -f $SERVER_DEPLOY_PATH/docker-compose.yml up -d --remove-orphans && \
        docker image prune -f"
   needs: ["build"]
   environment:
     name: production
     url: https://appshub.smartcafe.com.ua
-  only:
-    - main
-    - master
+  only: [main, master]
