--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: smartapphub
     restart: unless-stopped
     ports:
-      - "6881:80"
+      - "${APP_PORT:-6886}:80"
     environment:
-      PHP_MEMORY_LIMIT: 256M
+      PHP_MEMORY_LIMIT: 2566M
     volumes:
       - /home/botwork/smartapphub/uploads:/var/www/html/uploads
       - /home/botwork/smartapphub/data:/var/www/html/data
